[build-system]
requires = ["hatchling>=1.12"]
build-backend = "hatchling.build"

[project]
name = "gapwrapper"
version = "0.1.0"
description = "A simple Python wrapper for GAP (Groups, Algorithms, Programming)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]